--- CHANGELOG ---
--- Future ---

--- PyFMI-2.16.0 ---
    * Added verification against the available free disk space when storing the result on disk (i.e. a protection
      against running out of disk space).
    * Changed testing framework from `nose` to `pytest`.
    * Removed tests from the PyFMI installation.
    * Moved test files from src/pyfmi/tests/... to tests/files/...
    * Moved test_util.* from src/pyfmi/tests to src/pyfmi

--- PyFMI-2.15.0 ---
    * Changed custom result handling for the Master algorithm to instead use a single ResultHandler for each model.
      A dictionary of the form {model: ResultHandler} needs to be supplied to the option.
    * Added prediction of the size of the result to get early feedback if it will reach the limit or not.
    * Added option to limit the size of the result ("result_max_size"), default set to 2GB.
    * Added method ResultDymolaBinary.get_variables_data. Included some minor refactorization.
      The new method allows for retrieving partial trajectories, and multiple trajectories at once.

--- PyFMI-2.14.0 ---
    * Updated the error message displayed when loading FMUs with needsExecutionTool set to True.
    * Loading unzipped FMUs now also works with relative paths.
    * Enabled setting logging categories in FMI2 via "set_debug_logging".
    * XML Logs exceeding maximal size will now be truncated to start/end of the last CAPI call which did not exceed the maximal log size.

--- PyFMI-2.13.1 ---
    * Numpy 2.x support
    * Allow to build without distutils for Python>=3.12 support

--- PyFMI-2.13.0 ---
    * Upgraded to Cython3.

--- PyFMI-2.12.0 ---
    * Removed utilities related to the obsolete FMUX model interface.
    * Removed no longer required dependency on lxml.
    * Unified result handling and allowed the master algorithm to use all available result handlers
    * Added new option "result_downsampling_factor" for simulation of CS-FMUs, including the Master algorithm.