@@ -1,5 +1,6 @@
 --- CHANGELOG ---
 --- Future ---
+    * Fixed an issue with `get_variables_data` returning full trajectories when mixed with `get_variable_data` calls.
 
 --- PyFMI-2.16.0 ---
     * Added verification against the available free disk space when storing the result on disk (i.e. a protection
